--- a/Project.toml
+++ b/Project.toml
@@ -11,3 +11,9 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
 julia = "^1.0"
+
+[extras]
+XUnit = "3e3c03f2-1a94-11e9-2981-050a4ca824ab"
+
+[targets]
+test = ["XUnit"]
